unpackaged/main/default/objects/Purchased_Product__c/Purchased_Product__c.object-meta.xml
<CustomObject>
    <label>Purchased Product</label>
    <nameField>
        <label>Purchased Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchased Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>