unpackaged/main/default/objects/Purchased_Product__c/fields/Active_Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Active_Annual_Recurring_Revenue__c</fullName>
    <label>Active Annual Recurring Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>