unpackaged/main/default/objects/Purchased_Product__c/fields/Active_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Active_Quantity__c</fullName>
    <label>Active Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>