unpackaged/main/default/objects/Purchased_Product__c/fields/Effective_Decommission_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Decommission_Date__c</fullName>
    <label>Effective Decommission Date</label>
    <type>Date</type>
</CustomField>