unpackaged/main/default/objects/Purchased_Product__c/fields/One_Time_Fees__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Fees__c</fullName>
    <label>One Time Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>